--- a/combogen/templates/combo-chart-full.html
+++ b/combogen/templates/combo-chart-full.html
@@ -4,24 +4,24 @@
     <meta charset="UTF-8">
     <title>{{ title }}</title>
     <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' type='text/css'>
+    <link rel="stylesheet" href="https://use.typekit.net/ucr7myw.css">
     <link rel="stylesheet" href="{{ cfg.rel_resources_path }}/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ cfg.rel_resources_path }}/css/style.css">
 </head>
 <body>
 <div id="container">
     <header>
-        <span id="status">{{ status }}</span>
         <img id="logo" src="{{ cfg.rel_resources_path }}/img/logo.svg" alt="logo">
         <h1 id="title">{{ cfg.translate(lang, "title") }}</h1>
-        <div id="legend">
-            {% include "legend.html" %}
-        </div>
     </header>
     {% include "combo-table.html" %}
     <footer>
         <div class="qr">
-            <img src="{{ cfg.rel_resources_path }}/img/app_qr.svg" alt="app">
+            <img src="{{ cfg.rel_resources_path }}/img/mobile_combo_app_qr.svg" alt="app">
             <h3>{{ cfg.translate(lang, "app") }}</h3>
+        </div>
+        <div id="legend">
+            {% include "legend.html" %}
         </div>
         <div id="disclaimer">{% include "disclaimer-" + lang + ".html" %}</div>
         <div class="qr">
