--- a/combogen/templates/legend.html
+++ b/combogen/templates/legend.html
@@ -2,9 +2,15 @@
     <div class="legend-icon"><i class="fa {{ cfg.interaction_icon(interaction) }}"></i></div>
     <div class="legend-content">{{ cfg.translate_interaction(lang, interaction) }}</div>
 {% endmacro %}
-<div class="legend-card synergy">{{ fa_label("Low Risk & Synergy") }}</div>
-<div class="legend-card safe">{{ fa_label("Low Risk & No Synergy") }}</div>
-<div class="legend-card decrease">{{ fa_label("Low Risk & Decrease") }}</div>
-<div class="legend-card caution">{{ fa_label("Caution") }}</div>
-<div class="legend-card unsafe">{{ fa_label("Unsafe") }}</div>
-<div class="legend-card dangerous">{{ fa_label("Dangerous") }}</div>
+<div class="legend">
+    <div class="legend-card caution">{{ fa_label("Caution") }}</div>
+    <div class="legend-card unsafe">{{ fa_label("Unsafe") }}</div>
+    <div class="legend-card dangerous">{{ fa_label("Dangerous") }}</div>
+</div>
+<div class="legend">
+    <div class="legend-card synergy">{{ fa_label("Low Risk & Synergy") }}</div>
+    <div class="legend-card safe">{{ fa_label("Low Risk & No Synergy") }}</div>
+    <div class="legend-card decrease">{{ fa_label("Low Risk & Decrease") }}</div>
+</div>
+
+<span id="status">{{ status }}</span>
