--- a/combogen/templates/combo-chart-full.html
+++ b/combogen/templates/combo-chart-full.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>{{ title }}</title>
-    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700' type='text/css'>
+    <link rel='stylesheet' href='https://fonts.googleapis.com/css?family=Open+Sans:400,600,700&subset=latin,latin-ext,cyrillic' type='text/css'>
     <link rel="stylesheet" href="https://use.typekit.net/ucr7myw.css">
     <link rel="stylesheet" href="{{ cfg.rel_resources_path }}/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ cfg.rel_resources_path }}/css/style.css">
